# GLSL-Crusher

./: CMakeLists.txt  FileUtils.cpp  FileUtils.h  OutputGenerator.cpp  OutputGenerator.h  README.md  ShaderUtils.cpp  ShaderUtils.h  Token.cpp  Token.h  main.cpp
.github/workflows/: release.yml
